# superkaramba

./: AUTHORS  CMakeLists.txt  CTestConfig.cmake  ChangeLog  DESIGN_DISCUSS  Mainpage.dox  Makefile  Makefile.am  Makefile.in  README  config-superkaramba.h.cmake  configure.in.bot  configure.in.in  karamba.kdevelop  karamba.kdevses  subdirs  superkaramba.kdevelop  superkaramba.kdevelop.pcs  superkaramba.kdevses
doc/: Makefile.am
doc/api/: api_html.rc  api_rtf.rc  make_api_doc.sh
doc/en/: Makefile.am
doc/faq/: faq.css  faq.html  faq.txt  faqfooter.html  faqfooter.txt  faqheader.html  faqheader.txt
doc/python_api/: api.css  api_html.rc  make_api_doc.sh
examples/: API  README  api.html  template.js  template.py  template.rb  test_all.sh
examples/JavaScriptClock/: clock.js
examples/WebBrowser/: webbrowser.py  webbrowser.theme
examples/autoHide/: main.py  main.theme
examples/bar/: bar.py  bar.theme
examples/barWithKross/: bar.py
examples/change_interval/: interval.py  interval.theme
examples/control_management/: mgmt.py  mgmt.theme
examples/disableRightClickMenu/: disable_menu.py  disable_menu.theme
examples/globalMouse/: README  eyes.py  eyes.theme
examples/globalMouse/extension/: setup.py  xcursor.c
examples/globalMouse/pics/: eyes.xcf
examples/graph/: advancedGraph.py  advancedGraph.theme  graph.py  graph.theme  graphxml.theme
examples/image/: image.py  image.theme  test1.sh  test2.sh
examples/input_api/: input_api.py
examples/input_example/: input_example.py  input_example.theme
examples/mouseDrag/karmix/: karmix.py  karmix.theme
examples/mouseDrop/: mousedrop.py  mousedrop.theme
examples/namedProgramSensor/: test.theme
examples/openCloseTheme/: 1.py  1.theme  2.theme
examples/plasmaAppletClock/: PlasmaAppletClock.py  PlasmaAppletClock.theme
examples/popupMenu/: popupMenu.py  popupMenu.theme
examples/richtext/: richtext.py  richtext.theme  rtext.py  rtext.theme
examples/rubyclock/: clock.rb  clock.theme
examples/service_group/: service_group.py  service_group.theme
examples/setIncomingData/: 1.py  1.theme  2.py  2.theme
examples/taskBar/cleanbar/: README  cleanbar.py  cleanbar.theme
examples/text/: text.py  text.theme
examples/unicode/: unicode.py  unicode.theme
icons/: CMakeLists.txt  Makefile  Makefile.in
mimetypes/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  x-superkaramba.desktop
plasma/: CMakeLists.txt  Messages.sh  plasma-package-superkaramba.desktop  plasma-scriptengine-superkaramba.desktop  plasma-skapplet-default.desktop  skapplet.cpp  skapplet.h  skappletadaptor.h  skappletscript.cpp  skappletscript.h  skpackage.cpp  skpackage.h  skscriptapplet.cpp
po/: karamba.pot
skapplet/: CMakeLists.txt  plasma-skapplet-default.desktop  skapplet.cpp  skapplet.h  skappletadaptor.h  skengineadaptor.h  skpackage.cpp  skscriptapplet.cpp  skscriptapplet.h  skwidgetadaptor.h
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Messages.sh  bar.cpp  bar.h  bar_python.cpp  bar_python.h  clickable.cpp  clickable.h  clickarea.cpp  clickarea.h  clickmap.cpp  clickmap.h  config-superkaramba.h.cmake  config_python.cpp  config_python.h  cpusensor.cpp  cpusensor.h  datesensor.cpp  datesensor.h  dcopinterface.h  disksensor.cpp  disksensor.h  graph.cpp  graph.h  graph_python.cpp  graph_python.h  imagelabel.cpp  imagelabel.h  imagelabel_python.cpp  imagelabel_python.h  input.cpp  input.h  input_python.cpp  input_python.h  karamba.cpp  karamba.desktop  karamba.h  (+118 more)
src/bindings/: CMakeLists.txt  Makefile.am  bar_python.cpp  input_python.h  textlabel_python.h
src/bindings/python/: CMakeLists.txt  Makefile.am  bar_python.cpp  bar_python.h  config_python.cpp  config_python.h  graph_python.cpp  graph_python.h  imagelabel_python.cpp  imagelabel_python.h  input_python.cpp  input_python.h  karamba_python.cpp  karamba_python.h  menu_python.cpp  menu_python.h  meter_python.cpp  meter_python.h  misc_python.cpp  misc_python.h  richtextlabel_python.cpp  richtextlabel_python.h  systray_python.cpp  systray_python.h  task_python.cpp  task_python.h  textlabel_python.cpp  textlabel_python.h  widget_python.cpp  widget_python.h
src/libpython/: Makefile.am  bar_python.h  graph_python.cpp  misc_python.h  richtextlabel_python.cpp  task_python.h  textlabel_python.cpp  widget_python.cpp
src/meters/: CMakeLists.txt  Makefile.am  bar.cpp  bar.h  clickarea.cpp  clickarea.h  clickmap.cpp  clickmap.h  graph.cpp  graph.h  imagelabel.cpp  imagelabel.h  input.cpp  input.h  meter.cpp  meter.h  richtextlabel.cpp  richtextlabel.h  textfield.cpp  textfield.h  textlabel.cpp  textlabel.h
src/python/: bar.cpp  bar.h  config.cpp  config.h  graph.cpp  graph.h  imagelabel.cpp  imagelabel.h  input.cpp  input.h  karamba.cpp  karamba.h  menu.cpp  menu.h  meter.cpp  meter.h  misc.cpp  misc.h  richtextlabel.cpp  richtextlabel.h  svcgrp.cpp  svcgrp.h  systray.cpp  task.cpp  task.h  textlabel.cpp  textlabel.h  widget.cpp  widget.h
src/sensors/: CMakeLists.txt  Makefile.am  cpu.cpp  cpu.h  cpusensor.cpp  cpusensor.h  date.cpp  date.h  datesensor.cpp  datesensor.h  disk.cpp  disk.h  disksensor.cpp  disksensor.h  lmsensor.cpp  lmsensor.h  mem.cpp  mem.h  memsensor.cpp  memsensor.h  network.cpp  network.h  networksensor.cpp  networksensor.h  noatunsensor.cpp  noatunsensor.h  plasmaengine.cpp  plasmaengine.h  program.cpp  program.h  programsensor.cpp  programsensor.h  rss.cpp  rss.h  rsssensor.cpp  rsssensor.h  sensor.cpp  sensor.h  sensorparams.cpp  sensorparams.h  (+12 more)
userdoc/: index.docbook
